--- a/index.html
+++ b/index.html
@@ -22,33 +22,35 @@
     <ul id="listaCompras">
         <li>
             <div class="item"> 
-                <button class="check-button">Selecione</button>
+                <button class="check-button" aria-label="Marcar como comprado">☐</button>
                 <span>Leite</span>
-                <button class="delete-button">Excluir</button>
+                <button class="delete-button" aria-label="Remover item">🗑️</button>
             </div>
         </li>
         <li>
             <div class="item"> 
-                <button class="check-button">Selecione</button>
+                <button class="check-button" aria-label="Marcar como comprado">☐</button>
                 <span>Café</span>
-                <button class="delete-button">Excluir</button>
+                <button class="delete-button" aria-label="Remover item">🗑️</button>
             </div>
         </li>
         <li>
             <div class="item"> 
-                <button class="check-button">Selecione</button>
+                <button class="check-button" aria-label="Marcar como comprado">☐</button>
                 <span>Açúcar</span>
-                <button class="delete-button">Excluir</button>
+                <button class="delete-button" aria-label="Remover item">🗑️</button>
             </div>
         </li>
         <li>
             <div class="item"> 
-                <button class="check-button">Selecione</button>
+                <button class="check-button" aria-label="Marcar como comprado">☐</button>
                 <span>Arroz</span>
-                <button class="delete-button">Excluir</button>
+                <button class="delete-button" aria-label="Remover item">🗑️</button>
             </div>
         </li>
     </ul>
+
+    <div id="contadorItens" aria-live="polite"></div>
 
     <script src="scripts.js">
      
